Add startup debug webhook for pseudo test